tests/compile_fail/not_allowed_on_unit_structs.rs
use diesel_sort_struct_fields::sort_fields;

#[sort_fields]
pub struct Thing;

fn main() {}
