tests/compile_fail/not_allowed_on_unit_structs.stderr
error: `#[sort_fields]` is not allowed on unit structs, only structs with named fields
 --> $DIR/not_allowed_on_unit_structs.rs:4:12
  |
4 | pub struct Thing;
  |            ^^^^^
